...
            })
      },
      floatingActionButton = {
        FloatingActionButton(
            onClick = { navObject.navigateTo(Route.EVENT_CREATION_SCREEN) },
            content = { Icon(Icons.Filled.Add, "organize an event") },
            modifier = Modifier.testTag("organize_event_button"))
      }) { innerPadding ->
        LazyColumn(Modifier.padding(innerPadding)) {
          if (closestEventsState.value.isEmpty()) {
            item {
              Text(
                  text = context.getString(R.string.turn_gps_on),
...
