...
    <string name="event_creation_screen_title_legend">Title</string>
    <string name="event_creation_screen_description">Add a description</string>
    <string name="event_creation_screen_description_legend">Description</string>
    <string name="event_creation_screen_location_legend">Location</string>
    <string name="event_creation_screen_start_date_legend">Event Start Date and Time</string>
    <string name="event_creation_screen_end_date_legend">Event End Date and Time</string>
    <string name="event_creation_screen_tags_legend">Add Event Tags</string>
    <string name="event_creation_screen_event_made_public">This event has been made public !</string>
    <string name="event_creation_screen_make_event_public">Make this event public</string>
    <string name="event_creation_screen_public_legend">Event Publicity</string>
    <string name="event_creation_screen_additional_features">Additional Features</string>
    <string name="event_picture_title">Event Picture</string>
    <string name="event_creation_screen_parking">Parking</string>
    <string name="event_creation_screen_number_parking">Number of parking places</string>
    <string name="event_creation_screen_number_beds">Number of beds</string>
    <string name="event_creation_screen_beds">Beds</string>
...
