...
data class SocialMedia(
    val platformName: String = "",
    val platformUrls: List<String> = emptyList(),
    val chosenGroupUrl: String = "",
    val labelResource: Int = 0,
    val iconResource: Int = 0,
    val testTag: String = ""
) {
  fun isEmpty(): Boolean {
    return chosenGroupUrl.isBlank()
  }
}

...
