...
  LazyColumn(
      modifier = Modifier.padding(16.dp).fillMaxHeight(), verticalArrangement = Arrangement.Top) {
        item {
          Text(
              stringResource(id = R.string.links_to_social_media),
              style = ChimpagneTypography.headlineSmall,
              modifier = Modifier.testTag("social_media_title"))
          Spacer(modifier = Modifier.height(16.dp))
        }
        for ((platform) in socialMediaStates) {
          item {
            SocialMediaTextField(
                socialMedia = uiState.socialMediaLinks[platform]!!,
...
