...
        Column(modifier = Modifier.padding(8.dp)) {
          TextField(
              maxLines = 1,
              value = description,
              onValueChange = { description = it },
              label = { Text(stringResource(id = R.string.supplies_description)) },
              modifier = Modifier.fillMaxWidth().testTag("supplies_description_field"))
          Spacer(modifier = Modifier.height(8.dp))
          TextField(
              value = quantity,
              onValueChange = { quantity = it },
              label = { Text(stringResource(id = R.string.supplies_quantity)) },
              keyboardOptions =
                  KeyboardOptions(imeAction = ImeAction.Done, keyboardType = KeyboardType.Number),
              keyboardActions = KeyboardActions(onDone = { /* Handle Done action */}),
              modifier = Modifier.fillMaxWidth().testTag("supplies_quantity_field"))
          Spacer(modifier = Modifier.height(8.dp))
          TextField(
              maxLines = 1,
              value = unit,
              onValueChange = { unit = it },
              label = { Text(stringResource(id = R.string.supplies_unit)) },
              modifier = Modifier.fillMaxWidth().testTag("supplies_unit_field"))
          Row {
            Button(
                onClick = { onDismissRequest() },
                modifier = Modifier.testTag("supplies_cancel_button")) {
                  Text(stringResource(id = R.string.chimpagne_cancel))
                }
...
                      ChimpagneSupply(
                          description = description,
                          quantity = quantity.toIntOrNull() ?: 0,
                          unit = unit))
                  onDismissRequest()
                },
                modifier = Modifier.testTag("supplies_add_button")) {
                  Text(stringResource(id = R.string.chimpagne_add))
                }
          }
        }
      },
      onDismissRequest = { onDismissRequest() })
...
