...

  Column(
      modifier = Modifier.fillMaxHeight().padding(16.dp), verticalArrangement = Arrangement.Top) {
        Legend(
            stringResource(id = R.string.event_creation_screen_supplies),
            Icons.Rounded.Inventory2,
            "supplies_title")
        Spacer(modifier = Modifier.height(16.dp))

        val showAddDialog = remember { mutableStateOf(false) }

        IconTextButton(
            text = stringResource(id = R.string.event_creation_screen_add_supplies),
            icon = Icons.Rounded.Add,
            onClick = { showAddDialog.value = true },
            modifier = Modifier.testTag("add_supplies_button"))

        if (showAddDialog.value) {

          EditSupplyDialog(
              onDismissRequest = { showAddDialog.value = false },
              onSave = eventViewModel::addSupply)
...
